# AI_Project_Evaluator_Backend

./: .env.example  .gitignore  _measure_latency.py  canary_transcribe.py  create_group_session.py  create_session_direct.py  cv_analyze_modal.py  full_api_test.py  qwen_vl_analyze.py  requirements.txt  requirements_nompl.txt  requirements_utf8.txt  schema.yml  startup.sh  student_token.json  test_gemini_auth.py  test_gemini_billing.py  test_vertex_auth.py  test_vertex_billing.py
AI_Evaluator_Backend/: azure_storage.py  llm.py  manage.py  middleware.py  requirements.txt  settings.py  urls.py
agora_service/: __init__.py  apps.py  cloud_recording.py  stt_manager.py  token_builder.py  transcript_parser.py  urls.py  views.py
authentication/: authentication.py  (+5 more)
exam-station-cv/: .gitignore  CLAUDE.md  pyproject.toml
exam-station-cv/scripts/: smoke_live.py
exam-station-cv/src/exam_cv/: analyze.py  service.py
exam-station-cv/src/exam_cv/behavior/: analyzers.py
exam-station-cv/src/exam_cv/capture/: audio.py  camera.py  recorder.py
exam-station-cv/src/exam_cv/contracts/: manifest.py  schemas.py  sink.py
exam-station-cv/src/exam_cv/events/: store.py
exam-station-cv/src/exam_cv/faces/: identity.py  mesh.py  model_assets.py
exam-station-cv/src/exam_cv/report/: summary.py
exam-station-cv/src/exam_cv/speaker/: attribution.py
exam-station-cv/tests/: conftest.py  test_analyze.py  test_attribution.py  test_behavior.py  test_enrollment_gallery.py  test_identity_and_tracker.py  test_recorder.py  test_runner_integration.py  test_schemas.py  test_store_and_summary.py
(+154 files in other folders)
